--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,7 +5,7 @@
 >
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.4paradigm.hybridsql</groupId>
+    <groupId>com.4paradigm.hybridse</groupId>
     <artifactId>hybridse-java</artifactId>
     <version>0.1.2</version>
     <modules>
