feat: add plugins and developers info for central repository

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -15,6 +15,31 @@
     </modules>
     <packaging>pom</packaging>
     <name>hybridse</name>
+    <description>The LLVM-based, hybrid-execution and high-performance SQL engine.</description>
+    <url>https://github.com/4paradigm/HybridSE</url>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>jingchen2222</id>
+            <name>Chen22</name>
+            <email>chenjing@4paradigm.com</email>
+            <url>https://github.com/jingchen2222</url>
+            <organization>4Paradigm</organization>
+            <organizationUrl>https://www.4paradigm.com/</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git@github.com:4paradigm/HybridSE.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:4paradigm/HybridSE.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/4paradigm/HybridSE</url>
+    </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.violationSeverity>error</plugin.violationSeverity>
@@ -110,6 +135,63 @@
                         </java>
                     </configuration>
                 </plugin>
+                <!-- For deploying in central repository -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.5</version>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.7</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -129,12 +211,12 @@
     -->
     <distributionManagement>
         <snapshotRepository>
-            <id>file-repository</id>
-            <url>file:///tmp/hybridse_java_packages/</url>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>file-repository</id>
-            <url>file:///tmp/hybridse_java_packages/</url>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
     <reporting>
