--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  linux-build:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:latest
@@ -31,7 +31,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: cpp-ut-result-${{ github.sha }}
+          name: linux-ut-result-cpp-${{ github.sha }}
           path: |
             build/*.xml
 
@@ -44,7 +44,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: java-ut-result-${{ github.sha }}
+          name: linux-ut-result-java-${{ github.sha }}
           path: |
             java/hybridse-sdk/target/**/TEST-*.xml
 
@@ -75,41 +75,84 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  macos-build:
+    name: Build in MacOS
+    runs-on: macos-latest
+    env:
+      CICD_RUNNER_THIRDPARTY_PATH: /Users/runner/thirdparty
+      CICD_RUNNER_THIRDSRC_PATH: /Users/runner/thirdsrc
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: "8"
+          distribution: "adopt"
+
+      - name: Install thirdparty
+        run: |
+          brew install swig
+          brew install gflags
+          brew install glog
+          brew install coreutils
+          brew install yaml-cpp
+          sh tools/install_thirdparty_mac.sh
+
+      - name: Build Core
+        run: |
+          ./tools/hybridse_build.sh
+
+      - name: Core Test
+        run: |
+          ./tools/hybridse_core_test.sh
+
+      - name: Upload Cpp UT Results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: macos-ut-result-cpp-${{ github.sha }}
+          path: |
+            build/*.xml
+
+      - name: Java SDK Test
+        run: |
+          cd java/
+          mvn -U clean compile test
+
+      - name: Upload Java UT Results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: macos-ut-result-java-${{ github.sha }}
+          path: |
+            java/hybridse-sdk/target/**/TEST-*.xml
+
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: build
+    needs: ["linux-build", "mac-build"]
     # the action will only run on 4paradigm/HybridSE's context, not for fork repo or dependabot
     if: >
       always() && github.event_name == 'push' || (
       github.event.pull_request.head.repo.full_name == github.repository &&
       github.event.sender.login != 'dependabot[bot]' )
     steps:
-      - name: Download Cpp Artifacts
+      - name: Download Artifacts
         uses: actions/download-artifact@v2
-        with:
-          name: cpp-ut-result-${{ github.sha }}
-          path: cpp-ut-result
 
-      - name: Publish Cpp UT Results
+      - name: Publish Linux UT Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          files: cpp-ut-result/**/*.xml
-          check_name: Cpp Test Report
-          comment_title: Cpp Test Report
+          files: linux-ut-result-*/**/*.xml
+          check_name: Linux Test Report
+          comment_title: Linux Test Report
 
-      - name: Download Java Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: java-ut-result-${{ github.sha }}
-          path: java-ut-result
-
-      - name: Publish Java UT Results
+      - name: Publish Mac UT Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          files: java-ut-result/**/*.xml
-          check_name: Java Test Report
-          comment_title: Java Test Report
-
+          files: macos-ut-result-*/**/*.xml
+          check_name: Mac Test Report
+          comment_title: Mac Test Report
 
   coverage:
     runs-on: ubuntu-latest
