--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -4,12 +4,12 @@
 
     <parent>
         <artifactId>sql-sdk</artifactId>
-        <groupId>com._4paradigm.sql</groupId>
+        <groupId>com.4paradigm.hybridsql</groupId>
             <version>2.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>sql-native</artifactId>
+    <artifactId>fedb-native</artifactId>
     <packaging>jar</packaging>
     <name>sql-native</name>
     <version>2.2.0</version>
