--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>sql-sdk</artifactId>
+        <artifactId>fedb-sdk</artifactId>
         <groupId>com.4paradigm.hybridsql</groupId>
             <version>2.2.0</version>
         <relativePath>../pom.xml</relativePath>
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fedb-native</artifactId>
     <packaging>jar</packaging>
-    <name>sql-native</name>
+    <name>fedb-native</name>
     <version>2.2.0</version>
 
     <properties>
