--- a/src/sdk/java/pom.xml
+++ b/src/sdk/java/pom.xml
@@ -5,10 +5,10 @@
 
     <groupId>com.4paradigm.hybridsql</groupId>
     <artifactId>fedb-sdk</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.0-SNAPSHOT</version>
     <modules>
-           <module>fedb-jdbc</module>
-           <module>fedb-native</module>
+           <module>sql-jdbc</module>
+           <module>sql-native</module>
     </modules>
     <packaging>pom</packaging>
     <name>fedb-sdk</name>
