--- a/src/sdk/java/sql-jdbc/pom.xml
+++ b/src/sdk/java/sql-jdbc/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>fedb-sdk</artifactId>
         <groupId>com.4paradigm.hybridsql</groupId>
-        <version>2.2.0</version>
+        <version>2.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fedb-jdbc</artifactId>
     <packaging>jar</packaging>
     <name>fedb-jdbc</name>
-    <version>2.2.0</version>
+    <version>2.2.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,9 +36,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com._4paradigm.sql</groupId>
-            <artifactId>sql-native</artifactId>
-            <version>2.2.0</version>
+            <groupId>com.4paradigm.hybridsql</groupId>
+            <artifactId>fedb-native</artifactId>
+            <version>2.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
