--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>fedb-sdk</artifactId>
         <groupId>com.4paradigm.hybridsql</groupId>
-            <version>2.2.0</version>
+            <version>2.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fedb-native</artifactId>
     <packaging>jar</packaging>
     <name>fedb-native</name>
-    <version>2.2.0</version>
+    <version>2.2.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
